--- a/JS_CLZ/11th.html
+++ b/JS_CLZ/11th.html
@@ -12,28 +12,29 @@
 
   <script type="text/javascript">
 
-    var a = prompt("Enter 1st no. :");
-    var b = prompt("Enter 2nd no. :");
-    var x = prompt("Enter 1 for sum, 2 for product & 3 for greater no.:");
+    var a = parseInt(prompt("Enter 1st no. :"));
+    var b = parseInt(prompt("Enter 2nd no. :"));
+    var x = parseInt(prompt("Enter 1 for sum, 2 for product & 3 for greater no.:"));
 
     var s, p;
 
     switch(x)
     {
-      case "1": s = a + b;
+      case 1: s = a + b;
         document.write("Sum = " + s);
         break;
 
-      case "2": p = a * b;
-        document.write("Product = " + s);
+      case 2: p = a * b;
+        document.write("Product = " + p);
         break;
 
-      case "3": if (a > b)
+      case 3: if (a > b)
         document.write(a + " is greater.");
 
       else
         document.write(b + " is greater.");
-
+        break;
+        
       default:
         document.write("Invalid Input");
 
