--- a/JS_CLZ/15th.html
+++ b/JS_CLZ/15th.html
@@ -10,7 +10,17 @@
   
   <script type="text/javascript">
 
-    
+    var n = prompt("Enter the no:");
+    var i, j, m;
+
+    for(i=1; i<=n; i++)
+    {
+      for(j=1; j<=10; j++)
+      {
+        document.write(i+"*"+j+"="+i*j+"<br>");
+      }
+      document.write("<hr>");
+    }
 
   </script>
 
